Bug 691610 - error code returned with FirstPage
Summary: error code returned with FirstPage
Status: RESOLVED FIXED
Alias: None
Product: GhostPCL
Classification: Unclassified
Component: PCL interpreter (show other bugs)
Version: unspecified
Hardware: PC All
: P4 normal
Assignee: Henry Stiles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-15 14:49 UTC by Henry Stiles
Modified: 2011-03-14 19:20 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henry Stiles 2010-09-15 14:49:12 UTC
With pdfwrite FirstPage and LastPage returns and error code but does produce pdf as usual.
Comment 1 Henry Stiles 2011-03-14 19:20:45 UTC
Fixed in 12291.