Use the return error code e_ExitLanguage when we exceed the page range.  This prevents an error message being printed each time the FirstPage and LastPage parameters are used, bug #691610.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12291 a1074d23-0009-0410-80fe-cf8c14f379e6